MOB-311: improve node server_

--- a/src/app/otp/otp-phone-number/otp-phone-number.component.html
+++ b/src/app/otp/otp-phone-number/otp-phone-number.component.html
@@ -18,7 +18,7 @@
             (keyup)="onPhoneNumberEnter($event)" >
           <!-- <div class="phone-num-display"> {{phoneNumber}}
           </div> -->
-          <div class="phone-num-error" *ngIf="phoneNumberError"> {{'customer_info.phoneNumberError' | translate}}</div>
+          <div class="phone-num-error" *ngIf="phoneNumberError"> {{'otp.phoneNumberError' | translate}}</div>
         </div>
       </div>
     </div>
@@ -27,7 +27,7 @@
       <!-- INITIAL BOTTOM SECTION -->
       <div>
         <div class="phone-num-bottom-initial-topic">
-          {{'customer_info.vistInfoTitle' | translate}}
+          {{'otp.phoneInfoTitle' | translate}}
         </div>
         <hr class="phone-devider">
         <div class="phone-num-points-container">
