MOB-311: fixes timer bugs

--- a/src/app/otp/otp-pin/otp-pin.component.css
+++ b/src/app/otp/otp-pin/otp-pin.component.css
@@ -207,6 +207,10 @@
   background: rgba(255, 255, 255, 0.2);
 }
 
+.otp-timer {
+  float: right;
+}
+
 /* Small phones */
 @media (max-width: 400px){
 
