MOB-311 fix bugs - team test

--- a/src/app/otp/otp-phone-number/otp-phone-number.component.html
+++ b/src/app/otp/otp-phone-number/otp-phone-number.component.html
@@ -42,7 +42,7 @@
         </div>
       </div>
     </div>
-    <div *ngIf="showLoader" class="" style="display: flex;">
+    <div *ngIf="showLoader" style="display: flex;">
       <div class="row width-control">
         <div class="loader-container">
           <div class="inline-block-elem left-cell" style="margin-left: 10px;">
