--- a/src/app/otp/otp-phone-number/otp-phone-number.component.css
+++ b/src/app/otp/otp-phone-number/otp-phone-number.component.css
@@ -1,3 +1,4 @@
+html, body {margin: 0; height: 100%; overflow: hidden}
 .customer-phone {
     margin: 10px auto;
     max-width: calc((9 * 40px) + 50px + (2px * 10) + 1px);
@@ -47,7 +48,7 @@
     caret-color: #bc0e3d;
     color: rgba(0, 0, 0, 0.82);
     width: 100%;
-    font-size: 14px;
+    font-size: 16px;
     margin: 0 -15px;
 }
 .phone-num-input-container {
@@ -107,6 +108,7 @@
   .phone-num-error {
     font-size: 12px;
     color: red;
+    margin:0 -15px;
   }
   .privacy-container {
       display: flex;
