--- a/src/app/ticket-info/queue/queue.component.html
+++ b/src/app/ticket-info/queue/queue.component.html
@@ -15,7 +15,7 @@
   </div>
   <div *ngIf="visitRecycleMsg"  class="center-text recycle-heading custom text-color" [ngClass]="{'queue-body-rtl' : isRtl}">{{ visitRecycleMsg }}</div>
 </div>
-<div [innerHTML]="'ticketInfo.ticketEndHeading' | translate" *ngIf="isTicketEndedOrDeleted" class="center-text sub-heading-text-2 custom text-color queue-end"></div>
-<div [innerHTML]="'ticketInfo.welcomeback' | translate" *ngIf="isTicketEndedOrDeleted" class="center-text sub-heading-text-2 custom text-color">
+<div [innerHTML]="'ticketInfo.ticketEndHeading' | translate" id="ticketEndHeading" *ngIf="isTicketEndedOrDeleted" class="center-text sub-heading-text-2 custom text-color queue-end"></div>
+<div [innerHTML]="'ticketInfo.welcomeback' | translate" id ="welcomeback" *ngIf="isTicketEndedOrDeleted" class="center-text sub-heading-text-2 custom text-color">
 
 </div>
