--- a/src/app/customer-data/cutomer-phone/cutomer-phone.component.css
+++ b/src/app/customer-data/cutomer-phone/cutomer-phone.component.css
@@ -196,6 +196,7 @@
 .custom-phone-card {
   height: calc(100vh - 16em) !important;
   overflow: auto;
+  overflow-x: hidden;
 }
 .secondary-btn:hover {
   background: rgba(255, 255, 255, 0.2);
