--- a/src/app/customer-data/cutomer-phone/cutomer-phone.component.css
+++ b/src/app/customer-data/cutomer-phone/cutomer-phone.component.css
@@ -193,10 +193,18 @@
 .privcay-container-bottom {
   margin: 30px;
 }
+
 .custom-phone-card {
-  height: calc(100vh - 16em) !important;
+  height: calc(100vh - 20em) !important;
   overflow: auto;
   overflow-x: hidden;
+}
+
+@media only screen and (max-height: 600px) { 
+  .custom-phone-card {
+    height: calc(100vh - 16em) !important;
+    overflow: auto;
+  }
 }
 .secondary-btn:hover {
   background: rgba(255, 255, 255, 0.2);
