--- a/src/app/service/list-container/services-container-tmpl.html
+++ b/src/app/service/list-container/services-container-tmpl.html
@@ -1,6 +1,6 @@
 <div class="table-container inner-margin-separator">
   
-  <div class="row sub-heading-text-1-margin">
+  <div class="row sub-heading-text-1-margin" *ngIf="!showLoader">
     <div class="col-xs-1 col-xxs"></div>
     <div class="col-xs-10 col-xxs">
       <div class="center-text sub-heading-text-1 custom text-color pad-bottom inner-margin-separator">
@@ -10,7 +10,7 @@
     <div class="col-xs-1 col-xxs"></div>
   </div>
 
-  <div class="text-center table-child-heading-1">
+  <div class="text-center table-child-heading-1" *ngIf="!showLoader">
     <div class="center-text">
       <span [innerHTML]="subHeadingTwo" class="sub-heading-text-2 service-limit-label custom text-color"></span>
     </div>
@@ -21,17 +21,17 @@
        <app-network-message></app-network-message>
     </span>
   </div>
-  <div class="table-child-list">
+  <div class="table-child-list" *ngIf="!showLoader">
     <app-services class="full-width" (onServiceSelection)='saveSelectedService($event)'
                   (onServiceListHeightUpdate)='onServiceListHeightUpdate($event)'
                   (onShowHideServiceFetchError)="showHideNetworkError($event);" (onServiceListLoaded)="onServiceListLoaded()"></app-services>
   </div>
-  <div class="table-child-shadow">
+  <div class="table-child-shadow" *ngIf="!showLoader">
     <div class="" [ngClass]="{'list-shadow' : true, 'list-show-hidden' : !showListShadow}">
     </div>
   </div>
 
-  <div class="table-child-footer" [hidden]="showNetWorkError">
+  <div class="table-child-footer" [hidden]="showNetWorkError || showLoader">
     <footer class="qm-footer" [hidden]="!isServiceListLoaded">
       <div class="center-text">
         <div class="accent-btn custom accent-bg-color btn-text-color" (click)='onTakeTicket()'>
@@ -39,5 +39,17 @@
         </div>
       </div>
     </footer>
+  </div>
+  <div *ngIf="showLoader" style="display: flex;margin-top: 10%;">
+    <div class="row width-control">
+      <div class="loader-container">
+        <div class="inline-block-elem left-cell" style="margin-left: 10px;">
+          <svg class="loader" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 51.35 51.35"><defs><style>.cls-1{opacity:0.15;}.cls-10,.cls-2,.cls-8,.cls-9{fill:#fff;}.cls-3{opacity:0.2;}.cls-4{opacity:0.25;}.cls-5{opacity:0.3;}.cls-6{opacity:0.4;}.cls-7{opacity:0.5;}.cls-8{opacity:0.6;}.cls-9{opacity:0.7;}.cls-10{opacity:0.8;}.cls-11{opacity:0.85;}.cls-12{opacity:0.9;}</style></defs><title>LoadingSpinner</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><g class="cls-1"><circle class="cls-2" cx="36.76" cy="6.47" r="3.5" transform="translate(12.78 35.07) rotate(-60)"/></g><g class="cls-3"><circle class="cls-2" cx="44.88" cy="14.59" r="3.5" transform="matrix(0.87, -0.5, 0.5, 0.87, -1.28, 24.39)"/></g><g class="cls-4"><circle class="cls-2" cx="47.85" cy="25.67" r="3.5"/></g><g class="cls-5"><circle class="cls-2" cx="44.88" cy="36.76" r="3.5" transform="translate(-9.4 57.25) rotate(-60)"/></g><g class="cls-6"><circle class="cls-2" cx="36.76" cy="44.88" r="3.5" transform="translate(-17.51 24.39) rotate(-30)"/></g><g class="cls-7"><circle class="cls-2" cx="25.67" cy="47.85" r="3.5"/></g><circle class="cls-8" cx="14.59" cy="44.88" r="3.5" transform="translate(-31.57 35.07) rotate(-60)"/><circle class="cls-9" cx="6.47" cy="36.76" r="3.5" transform="matrix(0.87, -0.5, 0.5, 0.87, -17.51, 8.16)"/><circle class="cls-10" cx="3.5" cy="25.67" r="3.5"/><g class="cls-11"><circle class="cls-2" cx="6.47" cy="14.59" r="3.5" transform="translate(-9.4 12.9) rotate(-60)"/></g><g class="cls-12"><circle class="cls-2" cx="14.59" cy="6.47" r="3.5" transform="translate(-1.28 8.16) rotate(-30)"/></g><circle class="cls-2" cx="25.67" cy="3.5" r="3.5"/></g></g></svg>
+        </div>
+        <div class="inline-block-elem right-cell" style="margin-top: 20px;">
+          <span id="branchLoading" class="sub-heading-text-3 custom text-color">{{ 'branch.loading' | translate }}</span>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
