add separated country code

--- a/src/app/customer-data/cutomer-phone/cutomer-phone.component.html
+++ b/src/app/customer-data/cutomer-phone/cutomer-phone.component.html
@@ -15,7 +15,20 @@
           <input class="phone-num-input" type="text" placeholder="  {{'customer_info.phone_placeholder' | translate}}"
             [(ngModel)]="phoneNumber" (change)="onPhoneNumberChanged()" (keyup.enter)="phoneNumContinue()"
             (focusin)="phoneNumberFeildFocused()" (focusout)="phoneNumberFeildUnfocused()"
-            (keyup)="onPhoneNumberEnter($event)" *ngIf="phoneSectionState === phoneSectionStates.INITIAL">
+            (keyup)="onPhoneNumberEnter($event)" *ngIf="!seperateCountryCode && phoneSectionState === phoneSectionStates.INITIAL">
+            
+          <input type="text" id="input-x" style="min-width: 150%;color: #000;letter-spacing: .8px;"
+            ng2TelInput
+            [ng2TelInputOptions]="{initialCountry: 'lk'}"
+            (intlTelInputObject)="telInputObject($event)"
+            (hasError)="hasError($event)"
+            (ng2TelOutput)="getNumber($event)"
+            (keydown.enter)="submitByKey($event);$event.target.blur()"
+            (keyup)="onPhoneNumberChanged()"
+            (countryChange)="onCountryChange($event)"
+            *ngIf="seperateCountryCode && phoneSectionState === phoneSectionStates.INITIAL"
+            [(ngModel)]="phoneNumber"/>
+            
           <div class="phone-num-display" *ngIf="phoneSectionState === phoneSectionStates.EDIT_PHONE"> {{phoneNumber}}
           </div>
           <div class="phone-num-error" *ngIf="phoneNumberError"> {{'customer_info.phoneNumberError' | translate}}</div>
@@ -95,7 +108,7 @@
     <footer class="qm-footer">
       <div class="center-text">
         <div *ngIf="phoneSectionState === phoneSectionStates.INITIAL"
-          class="send_button custom btn-text-color accent-bg-color" (click)="phoneNumContinue()">
+          class="send_button custom btn-text-color accent-bg-color" (click)="seperateCountryCode? submitByBtn($event):phoneNumContinue()">
           {{'customer_info.send' | translate}}
         </div>
 
