--- a/src/app/customer-data/cutomer-phone/cutomer-phone.component.css
+++ b/src/app/customer-data/cutomer-phone/cutomer-phone.component.css
@@ -50,6 +50,13 @@
     font-size: 16px;
     margin: 0 -15px;
 }
+.phone-num-input_ {
+    caret-color: #bc0e3d;
+    color: rgba(0, 0, 0, 0.82);
+    width: 100%;
+    font-size: 16px; 
+    margin: 0 -15px;
+}
 .phone-num-input-container {
     margin: 14px 10px;
     flex-grow: 1;
@@ -225,4 +232,5 @@
       margin-top: -16px;
     }
   }
-  
+
+  html, body {position:fixed; margin: 0; height: 100%; overflow: hidden}
