MOB-548: Issues in Safari browser

--- a/src/app/customer-data/cutomer-phone/cutomer-phone.component.html
+++ b/src/app/customer-data/cutomer-phone/cutomer-phone.component.html
@@ -19,7 +19,7 @@
             
           <input type="text" class="phone-num-input_" 
             ng2TelInput
-            [ng2TelInputOptions]="{initialCountry: 'lk'}"
+            [ng2TelInputOptions]="{initialCountry: 'us'}"
             (intlTelInputObject)="telInputObject($event)"
             (hasError)="hasError($event)"
             (ng2TelOutput)="getNumber($event)"
