--- a/src/app/ticket-info/ticket/ticket.component.css
+++ b/src/app/ticket-info/ticket/ticket.component.css
@@ -73,9 +73,12 @@
   color: black !important;
   width: 133px !important;
   line-height: 24px;
-  word-break: break-all !important;
   font-weight: 300 !important;
   font-family: Roboto-Regular;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
 }
 
 .ticket-remove-heading {
