MOB-552: Improving Mobile Ticket phone number with country code/flag

--- a/src/app/customer-data/customer-data.component.css
+++ b/src/app/customer-data/customer-data.component.css
@@ -84,9 +84,11 @@
 .phone-num-input_ {
     caret-color: #bc0e3d;
     color: rgba(0, 0, 0, 0.82);
-    width: 100%;
     font-size: 16px; 
-    margin: 0 -15px;
+}
+.custom ul{
+  margin: 0 0 0 0px !important;
+  font-size: larger;
 }
 .phone-num-input-container {
     margin: 14px 10px;
