--- a/src/app/customer-data/customer-data.component.html
+++ b/src/app/customer-data/customer-data.component.html
@@ -29,12 +29,33 @@
                     (keyup)="onPhoneNumberEnter($event)"
                     *ngIf="!seperateCountryCode && phoneSectionState === phoneSectionStates.INITIAL">
 
-                  <input type="text" class="phone-num-input_" ng2TelInput [ng2TelInputOptions]="{initialCountry: 'us'}"
+                  <!-- <input type="text" class="phone-num-input_" ng2TelInput [ng2TelInputOptions]="{initialCountry: 'us'}"
                     (intlTelInputObject)="telInputObject($event)" (hasError)="hasError($event)"
                     (ng2TelOutput)="getNumber($event)" (keydown.enter)="submitByKey($event);$event.target.blur()"
                     (keyup)="onPhoneNumberChanged()" (countryChange)="onCountryChange($event)"
                     *ngIf="seperateCountryCode && phoneSectionState === phoneSectionStates.INITIAL"
-                    [(ngModel)]="phoneNumber" />
+                    [(ngModel)]="phoneNumber" /> -->
+
+                  <form #f="ngForm" [formGroup]="phoneForm">
+                      <ngx-intl-tel-input *ngIf="seperateCountryCode && phoneSectionState === phoneSectionStates.INITIAL"
+                        class="phone-num-input_"
+                        [preferredCountries]="prefferedCountryCodeList"
+                        [enableAutoCountrySelect]="false" 
+                        [enablePlaceholder]="true" 
+                        [searchCountryFlag]="true"
+                        [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
+                        [selectFirstCountry]="true" 
+                        [selectedCountryISO]="selectedCountryISO"
+                        [maxLength]="15"  
+                        [phoneValidation]="true" 
+                        [separateDialCode]="true"
+                        [(ngModel)]="phoneNumberObject"
+                        (keyup.enter)="CustomerInfoContinue()"
+                        (click) = "dropDownClicked()"
+                        (keyup)="onPhoneNumberEnter($event)"
+                        name="phone" formControlName="phone">
+                      </ngx-intl-tel-input>
+                  </form>
 
                   <div class="phone-num-display" *ngIf="phoneSectionState === phoneSectionStates.EDIT_PHONE">
                     {{phoneNumber}}
@@ -244,10 +265,10 @@
           <div class="center-text">
             <div *ngIf="phoneSectionState === phoneSectionStates.INITIAL"
               class="send_button custom btn-text-color accent-bg-color"
-              (click)="seperateCountryCode? submitByBtn($event):CustomerInfoContinue()">
+              (click)="CustomerInfoContinue()">
               {{'customer_info.send' | translate}}
             </div>
-
+            <!-- (click)="seperateCountryCode? submitByBtn($event):CustomerInfoContinue()" -->
             <div
               *ngIf="phoneSectionState === phoneSectionStates.INITIAL || phoneSectionState === phoneSectionStates.PRIVACY_POLICY"
               class="send_button secondary-btn custom btn-text-color" (click)='skipAndcreateVisit()'>
