--- a/src/app/appointment/appointment.component.html
+++ b/src/app/appointment/appointment.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="col-xs-6 col-xxs" [ngClass]="{'col-rtl': isRtl}">
       <div class="custom">
-        <div  class="appointment-data" [ngClass]="{'appointment-data-rtl': isRtl, 'appointment-data': !isRtl}">{{ app.branchName }}</div>
+        <div  class="appointment-data" *ngIf="branchEntity" [ngClass]="{'appointment-data-rtl': isRtl, 'appointment-data': !isRtl}">{{ branchEntity.name }}</div>
       </div>
     </div>
   </div>
