--- a/src/app/otp/otp-phone-number/otp-phone-number.component.html
+++ b/src/app/otp/otp-phone-number/otp-phone-number.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="customer-phone" [hidden]="showNetWorkError">
   
-  <div class="custom-phone-card">
+  <div class="custom-phone-card" id="customer-data-container">
     <!-- INITIAL AND EDIT PHONE SECTION -->
     <div class="phone-num-text"> {{'customer_info.phoneNumber' | translate}} </div>
     <div class="customer-phone__number-container">
