--- a/src/app/ticket-info/queue/queue.component.html
+++ b/src/app/ticket-info/queue/queue.component.html
@@ -1,21 +1,27 @@
 <div class="text-center queue-container" *ngIf="!isTicketEndedOrDeleted">
-  <div [ngClass]="{'queue-heading-alignment-rtl' : isRtl, 'queue-heading-alignment' : true, 'queue-heading' : true, 'custom' : true, 'text-color' : true}">
-    {{ 'ticketInfo.queueHeading' | translate }}
+  <div *ngIf="showAppTime && appointmentTime" style="color: aliceblue;line-height: 34px;display: grid;margin: 4px 0 10px 0px;">
+    <span style="font-size: 21px;font-family: 'Roboto-Regular';">{{ 'ticketInfo.appointmentTime' | translate }}</span>
+    <span style="font-size: 39px;font-family: 'Roboto-Bold';">{{appointmentTime}} </span> 
   </div>
-  <div [ngClass]="{'queue-body-rtl' : isRtl, 'queue-heading-alignment' : true, 'queue-heading' : true,
-  'custom' : true, 'text-color' : true}" [hidden]="!showNetWorkError">
-    <app-network-message></app-network-message>
+  <div *ngIf="showQueue && !showAppTime">
+    <div [ngClass]="{'queue-heading-alignment-rtl' : isRtl, 'queue-heading-alignment' : true, 'queue-heading' : true, 'custom' : true, 'text-color' : true}">
+      {{ 'ticketInfo.queueHeading' | translate }}
+    </div>
+    <div [ngClass]="{'queue-body-rtl' : isRtl, 'queue-heading-alignment' : true, 'queue-heading' : true,
+    'custom' : true, 'text-color' : true}" [hidden]="!showNetWorkError">
+      <app-network-message></app-network-message>
+    </div>
+    <div *ngIf="(!showNetWorkError && !visitRecycleMsg)" class="queue-body" [ngClass]="{'queue-body-rtl' : isRtl}">
+      <app-queue-item [queueName]="queueItem.queueName" [visitPosition]="queueItem.visitPosition" [waitingVisits]="queueItem.waitingVisits"
+        [upper]="queueItem.upperBound" [lower]="queueItem.lowerBound" [prevUpperBound]="queueItem.prevUpperBound" [prevLowerBound]="queueItem.prevLowerBound"
+        [prevWaitingVisits]="queueItem.prevWaitingVisits" [prevVisitPosition]="queueItem.prevVisitPosition" [index]="queueItem.index"
+        *ngFor="let queueItem of queueItems" class="app-queue-item"></app-queue-item>
+  
+    </div>
+    <div *ngIf="visitRecycleMsg"  class="center-text recycle-heading custom text-color" [ngClass]="{'queue-body-rtl' : isRtl}">{{ visitRecycleMsg }}</div>
   </div>
-  <div *ngIf="(!showNetWorkError && !visitRecycleMsg)" class="queue-body" [ngClass]="{'queue-body-rtl' : isRtl}">
-    <app-queue-item [queueName]="queueItem.queueName" [visitPosition]="queueItem.visitPosition" [waitingVisits]="queueItem.waitingVisits"
-      [upper]="queueItem.upperBound" [lower]="queueItem.lowerBound" [prevUpperBound]="queueItem.prevUpperBound" [prevLowerBound]="queueItem.prevLowerBound"
-      [prevWaitingVisits]="queueItem.prevWaitingVisits" [prevVisitPosition]="queueItem.prevVisitPosition" [index]="queueItem.index"
-      *ngFor="let queueItem of queueItems" class="app-queue-item"></app-queue-item>
-
+  <div [innerHTML]="'ticketInfo.ticketEndHeading' | translate" id="ticketEndHeading" *ngIf="isTicketEndedOrDeleted" class="center-text sub-heading-text-2 custom text-color queue-end"></div>
+  <div [innerHTML]="'ticketInfo.welcomeback' | translate" id ="welcomeback" *ngIf="isTicketEndedOrDeleted" class="center-text sub-heading-text-2 custom text-color">
   </div>
-  <div *ngIf="visitRecycleMsg"  class="center-text recycle-heading custom text-color" [ngClass]="{'queue-body-rtl' : isRtl}">{{ visitRecycleMsg }}</div>
-</div>
-<div [innerHTML]="'ticketInfo.ticketEndHeading' | translate" id="ticketEndHeading" *ngIf="isTicketEndedOrDeleted" class="center-text sub-heading-text-2 custom text-color queue-end"></div>
-<div [innerHTML]="'ticketInfo.welcomeback' | translate" id ="welcomeback" *ngIf="isTicketEndedOrDeleted" class="center-text sub-heading-text-2 custom text-color">
 
 </div>
