--- a/src/app/ticket-info/queue/queue.component.css
+++ b/src/app/ticket-info/queue/queue.component.css
@@ -48,6 +48,21 @@
   font-weight: 300;
 }
 
+.queue-app {
+  color: #FFFFFF;
+  line-height: 34px;
+  display: grid;
+  margin: 4px 0 10px 0px;
+}
+.queue-app-heading {
+  font-size: 21px;
+  font-family: 'Roboto-Regular';
+}
+.queue-app-time {
+  font-size: 39px;
+  font-family: 'Roboto-Bold';
+}
+
 /* Small phones */
 @media (max-width: 400px){
 
