MOB-634: 'Powered by Qmatic' in Mobile Ticket

--- a/src/app/shared/frame-layout/frame-layout.component.html
+++ b/src/app/shared/frame-layout/frame-layout.component.html
@@ -8,6 +8,18 @@
   <div [hidden]="!isBrowserSupport">
     <ng-content></ng-content>
   </div>
+  <div class="qm-footer custom text-color footer-bg-color" *ngIf="isLogoFooterEnabled">
+    <span>{{'footer.text' | translate}}</span>
+    <img class="qm-brand-logo custom footer-logo" src="/app/resources/brand_logo.png" alt="brand logo">
+  </div>
+  <div class="qm-footer custom text-color footer-bg-color footer-custom-text" *ngIf="isCustomFooterEnabled && defautlDir">
+    <span>{{'footer.text' | translate}} </span>
+    <span  class="custom-text">{{customText}}</span>
+  </div>
+  <div class="qm-footer custom text-color footer-bg-color footer-custom-text" *ngIf="isCustomFooterEnabled && !defautlDir">
+    <span class="custom-text">{{customText}} &#8202;</span>
+    <span>{{'footer.text' | translate}} </span>
+  </div>
   <div [hidden]="isBrowserSupport">
     <not-support-layout [browserName]='onBrowserNotSupport' [isApplePlatform]='isApplePlatform'></not-support-layout>
   </div>
