--- a/src/app/shared/frame-layout/frame-layout.component.css
+++ b/src/app/shared/frame-layout/frame-layout.component.css
@@ -70,6 +70,31 @@
   vertical-align: middle;
 }
 
+.qm-footer{
+  background: #1a1c34;
+  text-align: center;
+  bottom: 0;
+  min-height: 30px;
+  position: fixed;
+  width: 100%;
+  font-size: 14px;
+  word-spacing: 3px;
+  margin: 2px 1px;
+}
+.qm-brand-logo {
+  width: 67px;
+  vertical-align: text-bottom;
+  margin: 4px 3px 0 3px;
+  padding: 0 3px;
+}
+.footer-custom-text {
+  padding: 4px;
+}
+.custom-text {
+  margin: 0 3px;
+  font-weight: 600;
+}
+
 /* Media Queries */
 /* Small phones */
 @media (max-width: 450px), (max-height: 450px){
